Fixed the alignment of the source class

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,24 +29,30 @@ body {
   top: .25em;
   left: -.5em;
 }
-.quote:after {
-  content: "”";
-  bottom: -.1em;
-  margin-left: .1em;
-  position: absolute;
-}
+
 .source {
   font-size: 1.25rem;;
   letter-spacing: 0.05em;
   line-height: 1.1;
   text-align: right;
   margin-right: 4em;
+ 
+ }
+
+
+.source:after {
+  
+  bottom: -.1em;
+  margin-left: .1em;
+  te
+
 }
 .source:before {
   content: "—";
 }
 .citation {
   font-style: italic;
+
 }
 .citation:before {
   content: ", ";
